<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>qrb_ros_battery</name>
  <version>1.0.0</version>
  <description>Receives battery statistics from the battery service</description>
  <maintainer email="quic_pkavasse@quicinc.com">pkavasse</maintainer>
  <license>BSD-3-Clause-Clear</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>qrb_battery_client</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
